ajout css gestion dans cms + correction bug alignement des labels (checkbox et radio)

--- a/public/css/admin/sass/custom/_base.scss
+++ b/public/css/admin/sass/custom/_base.scss
@@ -5,7 +5,6 @@
 
 label, .radio label, .checkbox label, .help-block {
     font-size: 14px;
-    padding : 5px;
 }
 
 table {
